Fixed issues on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,6 +67,6 @@
   }
   
   body {
-    @apply bg-surface-50 text-foreground;
+    @apply bg-surface-50 text-foreground overflow-x-hidden;
   }
 } 
